--- a/pages/index.html
+++ b/pages/index.html
@@ -45,6 +45,8 @@
                 body: JSON.stringify(payload)
             });
 
+            alert("El email ha sido enviado exitosamente.");
+            document.getElementById('sendButton').innerText = "Re-enviar archivos";
             startCountdown();
         }
 
@@ -118,7 +120,7 @@
             >
                 <i class="fas fa-refresh mr-2"></i> Verificar documento
             </button>
-            <button onclick="closePopup()" class="w-full bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-full">Atras</button>
+            <button onclick="closePopup()" class="w-full bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-full">Cerrar</button>
         </div>
     </div>
 </body>
