refactor: 💡 update host for auth and rest of SFMC

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,11 @@
                     DNI: formData.get('dni'),
                     email: formData.get('email'),
                     Nombre: 'Pepito',
-                    Apellido: 'Astunio'
+                    Apellido: 'Astunio',
+                    Celular: '999666333',
+                    isDocument1Read: 'N',
+                    isDocument2Read: 'N',
+                    isSend: false
                 }
             };
 
