--- a/pages/verification/another.html
+++ b/pages/verification/another.html
@@ -27,7 +27,7 @@
         window.onload = renderFiles;
     </script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="w-full bg-gray-100 flex items-center justify-center min-h-screen mx-auto">
     <div class="bg-white p-6 rounded-lg shadow-lg text-center max-w-3xl w-full">
         <h2 class="text-lg font-bold mb-4">Verificación de Documentos</h2>
 
