--- a/pages/verification/index.html
+++ b/pages/verification/index.html
@@ -92,7 +92,7 @@
         window.onload = renderFiles;
     </script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen w-full mx-auto">
     <div class="bg-white p-6 rounded-lg shadow-lg text-center max-w-3xl w-full">
         <h2 class="text-lg font-bold mb-4">Verificación de Documentos</h2>
 
