refactor: 💡 update version another.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -117,7 +117,7 @@
 
                 alert('El usuario dio su confirmación');
             } else {
-                alert("No se encontró registro que confirme la lectura de archivos.");
+                alert("No se encontró registro que confirme la lectura de archivos y/o no se completo con el proceso.");
             }
         }
     </script>
