fix: 🐛 update name of input for home

--- a/pages/index.html
+++ b/pages/index.html
@@ -147,7 +147,7 @@
         <div class="bg-white p-6 rounded-lg shadow-lg text-center max-w-lg w-full">
             <h2 class="text-lg font-bold mb-4">Envio de archivos contractuales</h2>
             <form id="popupForm" class="flex flex-col gap-4 mb-2">
-                <input type="text" name="name" placeholder="Nombre" class="border rounded-lg p-2" required>
+                <input type="text" name="nombre" placeholder="Nombre" class="border rounded-lg p-2" required>
                 <input type="text" name="apellidos" placeholder="Apellidos" class="border rounded-lg p-2" required>
                 <input type="text" name="celular" placeholder="Celular" class="border rounded-lg p-2" required>
                 <input type="email" name="email" placeholder="Email" class="border rounded-lg p-2" required>
