refactor: 💡 update EventDefinitionKey for banbif

--- a/pages/index.html
+++ b/pages/index.html
@@ -41,7 +41,7 @@
 
             const payload = {
                 ContactKey: formData.get('email'),
-                EventDefinitionKey: "APIEvent-52fce315-0dfb-399a-5630-a389ae567ca3",
+                EventDefinitionKey: "BANBIF_NEW_FLOW",
                 Data: {
                     SubscriberKey: formData.get('email'),
                     DNI: formData.get('dni'),
