--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,54 @@
     <title>Biometric Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+</head>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen relative">
+    <div class="bg-white p-6 rounded-lg shadow-lg text-center max-w-md w-full">
+        <!-- Image -->
+        <img src="img/pva-img.png" alt="Biometric options" class="mx-auto mb-6" />
+
+        <!-- Buttons -->
+        <button id="mainButton" onclick="openPopup()" class="w-full bg-gray-500 text-white font-bold py-2 px-4 rounded-full mb-4 flex items-center justify-center" disabled>
+            <i class="fas fa-upload mr-2"></i> Enviar Archivos
+        </button>
+        <button id="biometricsButton" onclick="activateSendFiles()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-full mb-4 flex items-center justify-center">
+            <i class="fas fa-fingerprint mr-2"></i> Biometría Facial
+        </button>
+        <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-full mb-4 flex items-center justify-center">
+            <i class="fas fa-fingerprint mr-2"></i> Biometría Dactilar
+        </button>
+        <button class="w-full bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-full flex items-center justify-center">
+            <i class="fas fa-bell mr-2"></i> Notificar a Supervisor
+        </button>
+    </div>
+
+    <!-- Popup -->
+    <div id="popup" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+        <div class="bg-white p-6 rounded-lg shadow-lg text-center max-w-lg w-full">
+            <h2 class="text-lg font-bold mb-4">Envio de archivos contractuales</h2>
+            <form id="popupForm" class="flex flex-col gap-4 mb-2">
+                <input type="text" name="nombre" placeholder="Nombre" class="border rounded-lg p-2" required>
+                <input type="text" name="apellidos" placeholder="Apellidos" class="border rounded-lg p-2" required>
+                <input type="text" name="celular" placeholder="Celular" class="border rounded-lg p-2" required>
+                <input type="email" name="email" placeholder="Email" class="border rounded-lg p-2" required>
+                <input type="text" name="dni" placeholder="DNI" class="border rounded-lg p-2" required>
+                <input type="text" name="requestNumber" placeholder="Codigo de envio" class="border rounded-lg p-2">
+            </form>
+            <button id="sendButton" onclick="sendData()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-full mb-2">Enviar Archivos</button>
+            <p id="countdown" class="hidden text-gray-500 mb-4"></p>
+            <button 
+                class="w-full bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-full flex items-center justify-center mb-4"
+                onclick="verifyUserReadFiles()"
+            >
+                <i class="fas fa-refresh mr-2"></i> Verificar documento
+            </button>
+            <button onclick="closePopup()" class="w-full bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-full">Cerrar</button>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
     <script>
         let token = null;
         let attemptSends = 1;
@@ -21,7 +69,11 @@
             sendFilesButton.classList.remove('bg-gray-500');
             sendFilesButton.classList.add('bg-blue-500');
 
-            alert("Se inicio flujo de envio de emails.");
+            // alert("Se inicio flujo de envio de emails.");
+            Toastify({
+                text: "Se inicio flujo de envio de emails",
+                duration: 3000
+            }).showToast();
         }
 
         async function fetchToken() {
@@ -69,7 +121,12 @@
                 console.error(e);
             });
 
-            alert("El email ha sido enviado exitosamente.");
+            // alert("El email ha sido enviado exitosamente.");
+            Toastify({
+                text: "El email ha sido enviado exitosamente.",
+                duration: 3000
+            }).showToast();
+
             document.getElementById('sendButton').innerText = "Re-enviar archivos";
             startCountdown();
         }
@@ -131,55 +188,19 @@
                 bioFacialButton.classList.remove('bg-blue-500');
                 bioFacialButton.classList.add('bg-gray-300');
 
-                alert('El usuario dio su confirmación');
+                // alert('El usuario dio su confirmación');
+                Toastify({
+                    text: "El usuario dio su confirmación",
+                    duration: 3000
+                }).showToast();
             } else {
-                alert("No se encontró registro que confirme la lectura de archivos y/o no se completo con el proceso.");
+                // alert("No se encontró registro que confirme la lectura de archivos y/o no se completo con el proceso.");
+                Toastify({
+                    text: "No se encontró registro que confirme la lectura de archivos y/o no se completo con el proceso.",
+                    duration: 3000
+                }).showToast();
             }
         }
     </script>
-</head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen relative">
-    <div class="bg-white p-6 rounded-lg shadow-lg text-center max-w-md w-full">
-        <!-- Image -->
-        <img src="img/pva-img.png" alt="Biometric options" class="mx-auto mb-6" />
-
-        <!-- Buttons -->
-        <button id="mainButton" onclick="openPopup()" class="w-full bg-gray-500 text-white font-bold py-2 px-4 rounded-full mb-4 flex items-center justify-center" disabled>
-            <i class="fas fa-upload mr-2"></i> Enviar Archivos
-        </button>
-        <button id="biometricsButton" onclick="activateSendFiles()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-full mb-4 flex items-center justify-center">
-            <i class="fas fa-fingerprint mr-2"></i> Biometría Facial
-        </button>
-        <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-full mb-4 flex items-center justify-center">
-            <i class="fas fa-fingerprint mr-2"></i> Biometría Dactilar
-        </button>
-        <button class="w-full bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-full flex items-center justify-center">
-            <i class="fas fa-bell mr-2"></i> Notificar a Supervisor
-        </button>
-    </div>
-
-    <!-- Popup -->
-    <div id="popup" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-        <div class="bg-white p-6 rounded-lg shadow-lg text-center max-w-lg w-full">
-            <h2 class="text-lg font-bold mb-4">Envio de archivos contractuales</h2>
-            <form id="popupForm" class="flex flex-col gap-4 mb-2">
-                <input type="text" name="nombre" placeholder="Nombre" class="border rounded-lg p-2" required>
-                <input type="text" name="apellidos" placeholder="Apellidos" class="border rounded-lg p-2" required>
-                <input type="text" name="celular" placeholder="Celular" class="border rounded-lg p-2" required>
-                <input type="email" name="email" placeholder="Email" class="border rounded-lg p-2" required>
-                <input type="text" name="dni" placeholder="DNI" class="border rounded-lg p-2" required>
-                <input type="text" name="requestNumber" placeholder="Codigo de envio" class="border rounded-lg p-2">
-            </form>
-            <button id="sendButton" onclick="sendData()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-full mb-2">Enviar Archivos</button>
-            <p id="countdown" class="hidden text-gray-500 mb-4"></p>
-            <button 
-                class="w-full bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-full flex items-center justify-center mb-4"
-                onclick="verifyUserReadFiles()"
-            >
-                <i class="fas fa-refresh mr-2"></i> Verificar documento
-            </button>
-            <button onclick="closePopup()" class="w-full bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-full">Cerrar</button>
-        </div>
-    </div>
 </body>
 </html>
